fix strukture in code for better readability

--- a/src/App.css
+++ b/src/App.css
@@ -149,6 +149,10 @@ img{
   object-fit: cover;
 }
 
+.option{
+  width: 100%;
+}
+
 @media only screen and (max-width: 600px) {
   .container{
     width:90%;
